src/uibook.css
.uibook-html,
.uibook-body {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 17px;
  line-height: 1.4;
  padding: 0;
  margin: 0;
  height: 100%;
}

#uibook-root {
  height: 100%;
}

.uibook-iframe {
  border: 0;
}

.uibook-page {
  transition: background 300ms;
  min-height: 100%;
}

.uibook-container {
  padding: 10px 0;
  z-index: 1;
  border: 0 solid #55d53e;
  transition: border-width 300ms;
}

.uibook-container.is-editable {
  border-width: 5px;
}

.uibook-container.is-fixed {
  padding-top: 67px;
}

.uibook-top {
  z-index: 3;
}

.uibook-button {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  height: 37px;
  padding: 0 15px;
  font-size: 11px;
  font-weight: bold;
  line-height: 37px;
  color: white;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.5px;
  background-color: #e60278;
  border: 0;
  border-radius: 3px;
  box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.2);
}

.uibook-button:hover {
  background-color: #ee4ea1
}

.uibook-button:active {
  padding-top: 1px;
  background-color: #e60278;
  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.2);
  opacity: 1;
}

.uibook-button.is-secondary:disabled,
.uibook-button:disabled {
  color: rgba(0, 0, 0, 0.1);
  pointer-events: none;
  background-color: rgba(0, 0, 0, 0.05);
  box-shadow: none;
}

.uibook-button.is-secondary {
  color: #2a2a2a;
  background-color: rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.05);
}

.uibook-button.is-secondary:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

.uibook-button.is-secondary:focus,
.uibook-button.is-secondary:active {
  background-color: rgba(0, 0, 0, 0.05);
}

.uibook-select__wrapper {
  position: relative;
  height: 37px;
  background-color: rgba(0, 0, 0, 0.05);
  border-radius: 3px;
}

.uibook-select__wrapper::after {
  position: absolute;
  top: 15px;
  right: 10px;
  pointer-events: none;
  content: '';
  border-top: 6px solid #2a2a2a;
  border-right: 3px solid transparent;
  border-left: 3px solid transparent;
}

.uibook-select__wrapper:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

.uibook-select__wrapper.is-accent {
  background-color: #e60278;
}

.uibook-select__wrapper.is-accent::after {
  border-top: 6px solid white;
}

.uibook-select__wrapper.is-disabled {
  pointer-events: none;
}

.uibook-select__wrapper.is-disabled::after {
  border-top: 6px solid rgba(0, 0, 0, 0.1);
}

.uibook-select__label {
  box-sizing: border-box;
  display: block;
  width: 100%;
  height: 100%;
  padding: 0 26px 0 10px;
  font-size: 11px;
  line-height: 37px;
  overflow: hidden;
  font-weight: bold;
  color: #2a2a2a;
  text-overflow: ellipsis;
  text-transform: uppercase;
  letter-spacing: 0.5px;
  white-space: nowrap;
  border-radius: 3px;
  box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.05);
}

.uibook-select__label.is-accent {
  color: white;
  box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.2);
}

.uibook-select {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
  border: none;
  border-radius: 3px;
  opacity: 0;
}

.uibook-button:focus,
.uibook-select:focus + label {
  box-shadow:
    0 0 0 2px #009aff,
    0 0 7px 0 #009aff;
  outline: none;
}

.uibook-select:disabled + label {
  color: rgba(0, 0, 0, 0.1);
  box-shadow: none;
}

.uibook-select__label[for="uibook-page-select"] {
  width: 190px;
}

.uibook-checkbox__wrapper {
  position: relative;
  display: block;
  padding: 5px 8px 4px calc(16px + 11px + 8px);
  margin: 0 -8px;
  cursor: pointer;
  border-radius: 3px;
}

.uibook-checkbox__wrapper:hover {
  background: rgba(0, 0, 0, 0.05);
}

.uibook-checkbox__wrapper:focus {
  outline: none;
  box-shadow: 0 0 0 2px #009aff, 0 0 7px 0 #009aff;
}

.uibook-checkbox__wrapper:active {
  transform: translateY(1px);
}

.uibook-checkbox {
  position: absolute;
  top: 8px;
  left: 8px;
  z-index: 2;
  width: 16px;
  height: 16px;
  cursor: inherit;
  opacity: 0;
}

.uibook-checkbox__fake {
  position: absolute;
  top: 8px;
  left: 8px;
  width: 14px;
  height: 14px;
  background: white;
  border: 1px solid #cdcccc;
  border-radius: 3px;
  transition: background 200ms ease-in;
}

.uibook-checkbox__fake svg {
  width: 16px;
  height: 16px;
  fill: white;
}

input:hover > .uibook-checkbox__fake {
  border-color: rgba(51, 51, 51, 0.6);
}

input:checked + .uibook-checkbox__fake {
  background: #55d53e;
  border-color: #55d53e;
  transition: none;
}

.uibook-checkbox__crop {
  position: absolute;
  top: -1px;
  left: -1px;
  width: 0;
  height: 16px;
  overflow: hidden;
  line-height: 0;
  transition: width 200ms;
}

input:checked + div > .uibook-checkbox__crop {
  width: 16px;
}

.uibook-header {
  display: flex;
  width: calc(100% - 20px);
  padding: 10px 10px 6px 10px;
  flex-wrap: wrap;
  z-index: 2;
  transition: background 300ms;
}

.uibook-header.is-fixed {
  position: fixed;
}

.uibook-nav > *,
.uibook-header > * {
  margin-right: 4px;
  margin-bottom: 4px;
}

.uibook-notice {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #000;
  text-decoration: none;
  background: #fff000;
}

.uibook-notice:hover {
  background: #ff0;
}

.uibook-notice__text {
  padding: 8px 15px;
}

.uibook-notice__text::before {
  content: "⚠️";
  position: relative;
  top: 1px;
  margin-right: 10px;
}

.uibook-notice__action {
  color: #e60278;
  padding: 0px 12px;
  white-space: nowrap;
}

.uibook-notice__action::after {
  content: "▶︎";
  position: relative;
  top: 1px;
  margin-left: 10px;
}

@media (max-width: 550px) {
  .uibook-notice__action {
    display: none;
  }
}

.uibook-nav {
  display: flex;
  margin-right: 25px;
  margin-bottom: 0;
}

.uibook-spacer {
  flex-grow: 1;
}

.uibook-editable {
  display: flex;
  align-items: center;
}

.uibook-link {
  height: 28px;
  padding: 0 8px;
  line-height: 28px;
  color: black;
  text-decoration: none;
}

.uibook-loader {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background:
  repeating-linear-gradient(
    -45deg,
    #f2f2f2 0,
    #f2f2f2 10px,
    #ccc    10px,
    #ccc    20px,
    #f2f2f2 20px,
    #f2f2f2 30px,
    #ccc    30px,
    #ccc    40px
  );
}

.uibook-loader__position {
  position: relative;
  overflow: hidden;
  line-height: 0;
}

.uibook-error {
  width: 320px;
  font-size: 18px;
  padding: 25px 15px;
}

.uibook-error__icon {
  font-size: 96px;
  line-height: 1;
}

.uibook-error__desc {
  margin-bottom: 15px;
}

.uibook-event {
  padding: 10px;
  margin-top: 10px;
  font-size: 14px;
  color: white;
  background: rgba(0, 0, 0, 0.8);
  border-radius: 3px;
}

.uibook-event__position {
  position: fixed;
  top: 0;
  left: calc(50% - 230px);
  width: 460px;
  z-index: 3;
}

@media (max-width: 550px) {
  .uibook-event__position {
    left: calc(50% - 150px);
    width: 300px;
  }
}

.uibook-event__name {
  font-weight: bold;
}

.uibook-go-to-top {
  position: fixed;
  padding: 0;
  bottom: 15px;
  right: 15px;
  border-radius: 15px;
  width: 30px;
  height: 30px;
  text-align: center;
  line-height: 30px;
  z-index: 5;
  transition: transform 0.2s ease;
}

.uibook-case {
  padding: 0 10px 10px 10px;
}

.uibook-code {
  display: block;
  color: #b7883a;
  font-size: 13px;
  margin: 5px -10px 10px;
  padding: 4px 14px;
  background: rgba(255, 255, 255, 0.25);
}

.uibook-content[contenteditable=true] {
  outline: none;
}

.uibook-content[contenteditable=true] *:hover {
  box-shadow: 0 0 0 1px #55d53e inset;
}

